# conway_gameOLife

./: CMakeLists.txt  Makefile  conway.cpp  game.hpp
include/: Line.hpp
